Update 'backend-tests-go-rbtemwma' component image to: quay.io/rhtap_qe/backend-tests-go-rbtemwma:61f5290f047b19ed9e7bb3509fcb0292730f2cd1

--- a/components/backend-tests-go-rbtemwma/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-rbtemwma/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-rbtemwma
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-rbtemwma:61f5290f047b19ed9e7bb3509fcb0292730f2cd1
+          name: container-image
